# pe2json

./: .gitignore  README.md  pyproject.toml
pe2json/: __init__.py  pe2json.py
tests/: test.py
